--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>ConfigServer</name>
+	<name>config-server</name>
 	<description>Demo project for Spring Config</description>
 
 	<parent>
